<resources>
    <string name="app_name">냠냠박사</string>
    <string name="shared_pref_key">Yumyum_DB</string>
    <string name="kakao_app_key">44e11b10e2c1d2c273b00e4d466badd2</string>
    <string name="common_food">음식</string>
    <string name="common_beverage">음료</string>
    <string name="common_button_change_mode">모드 변경 버튼</string>
    <string name="common_number">1</string>
    <string name="common_cost_example">12000원</string>
    <string name="common_brand_logo">브랜드 로고</string>
    <string name="common_weekly_ranking">주간 랭킹</string>
    <string name="common_recipe_title">레시피 이름</string>
    <string name="common_recipe_cost">레시피 가격</string>
    <string name="common_recipe_image">레시피 이미지</string>
    <string name="common_like_image">좋아요 아이콘</string>
    <string name="common_brand_icon">브랜드 아이콘</string>
    <string name="common_brand">브랜드</string>
    <string name="common_sort">정렬</string>
    <string name="common_filter">필터</string>
    <string name="common_iv_bookmark">북마크 이미지</string>
    <string name="common_cancel">취소</string>
    <string name="common_next">다음</string>
    <string name="common_pass">건너뛰기</string>
    <string name="common_ok">확인</string>
    <string name="common_complete">완료</string>
    <string name="common_brand_en">brand</string>
    <string name="common_public">공개</string>
    <string name="common_private">비공개</string>
    <string name="common_back_icon">뒤로가기 아이콘</string>
    <string name="common_menu_icon">메뉴 아이콘</string>
    <string name="common_yes">네</string>
    <string name="common_no">아니오</string>
    <string name="common_search">검색</string>
    <string name="common_starbucks">스타벅스</string>
    <string name="common_amasvin">아마스빈</string>
    <string name="common_gongcha">공차</string>
    <string name="common_ediya">이디야</string>
    <string name="common_cocktail">칵테일</string>
    <string name="common_etc">기타</string>
    <string name="common_sandwich">샌드위치</string>
    <string name="common_maratang">마라탕</string>
    <string name="common_tteokbokki">떡볶이</string>
    <string name="common_salad">샐러드</string>
    <string name="common_yogurt">요거트</string>
    <string name="common_ramen">라면</string>
    <string name="common_price">가격</string>
    <string name="common_unit_money">원</string>
    <string name="common_total_price">총 금액</string>
    <string name="common_range">~</string>
    <string name="common_taste">맛</string>
    <string name="common_taste_detail">세부 맛</string>
    <string name="common_multi_selectable">(중복선택가능)</string>
    <string name="common_tagItem">#%1$s</string>
    <string name="common_variable_price">%1$d원</string>
    <string name="common_update">추후 업데이트 예정입니다.</string>
    <string name="taste_sweet">단맛</string>
    <string name="taste_salty">짠맛</string>
    <string name="taste_sour">신맛</string>
    <string name="taste_spicy">매운맛</string>
    <string name="taste_bitter">쓴맛</string>
    <string name="taste_detail_sweet">달콤한</string>
    <string name="taste_detail_light">담백한</string>
    <string name="taste_detail_sour">새콤한</string>
    <string name="taste_detail_cool">시원한</string>
    <string name="taste_detail_salty">짭짤한</string>
    <string name="taste_detail_greasy">느끼한</string>
    <string name="taste_detail_attractive">삼삼한</string>
    <string name="taste_detail_spicy">매콤한</string>
    <string name="taste_detail_hot">얼큰한</string>
    <string name="taste_detail_neat">깔끔한</string>
    <string name="taste_detail_savory">고소한</string>
    <string name="taste_detail_refresh">개운한</string>
    <string name="grade_student">학생</string>
    <string name="grade_bachelor">학사</string>
    <string name="grade_master">석사</string>
    <string name="grade_expert">박사</string>
    <string name="grade_professor">교수</string>
    <string name="menu_main_bottom_home">홈</string>
    <string name="menu_main_bottom_research_recipe">레시피 탐구</string>
    <string name="menu_main_bottom_write_recipe">래시피 작성</string>
    <string name="menu_main_bottom_my_recipe">나의 레시피</string>
    <string name="menu_main_bottom_my_page">마이페이지</string>
    <string name="write_recipe_tv_title">레시피 작성</string>
    <string name="write_first_tv_guide">종류와 브랜드를 선택해주세요</string>
    <string name="write_second_et_name">레시피이름</string>
    <string name="write_intent_inputList">inputList</string>
    <string name="write_third_tv_menu_guide">메뉴 종류</string>
    <string name="write_fourth_tv_taste_guide">맛(중복선택가능)</string>
    <string name="write_fourth_tv_detail_taste_guide">세부 맛(중복선택가능)</string>
    <string name="write_fifth_tv_photo">사진</string>
    <string name="write_fifth_photo_guide">(필수, 최대3장)</string>
    <string name="write_fifth_tv_review">리뷰</string>
    <string name="write_fifth_tv_private">레시피 비공개</string>
    <string name="write_dialog_tv_finish">레시피를 업로드 하시겠습니까?</string>
    <string name="write_tv_text_count_init">0/100</string>
    <string name="write_tv_text_count">%1$d/100</string>
    <string name="img_permission_dialog_title">이미지 접근 권한 허용을 거부하였습니다.</string>
    <string name="research_icon_ranking_medal">랭킹 메달</string>
    <string name="terms_1_title">제 1조(목적)</string>
    <string name="terms_1_content">이 약관은 팀 냠냠박사(이하 “운영자”라 합니다)가 운영하는 냠냠박사 “애플리케이션”(이하 “애플리케이션”을 “APP”이라고 합니다)의 서비스 이용 및 제공에 관한 제반 사항의 규정을 목적으로 합니다.</string>
    <string name="terms_2_title">제2조 (용어의 정의)</string>
    <string name="terms_2_content">① 이 약관에서 사용하는 용어의 정의는 다음과 같습니다.\n\n1. “서비스”라 함은 구현되는 PC, 모바일 기기를 통하여 “이용자”가 이용할 수 있는 레시피 작성 등 운영자가 제공하는 제반 서비스를 의미합니다.\n\n2.“이용자”란 “APP”에 접속하여 이 약관에 따라 “APP”이 제공하는 서비스를 받는 회원 및 비회원을 말합니다.\n\n3. “회원”이란 “APP”에 개인정보를 제공하여 회원등록을 한 자로서, “APP”이 제공하는 서비스를 이용하는 자를 말합니다. \n\n4. “모바일 기기”란 콘텐츠를 다운로드 받거나 설치하여 사용할 수 있는 기기로서, 휴대폰, 스마트폰, 휴대정보단말기(PDA), 태블릿 등을 의미합니다.\n\n5. “계정정보”란 회원의 회원번호와 닉네임 등 회원이 운영자에게 제공한 정보를 의미합니다.\n\n6. “애플리케이션”이란 운영자가 제공하는 서비스를 이용하기 위하여 모바일 기기를 통해 다운로드 받거나 설치하여 사용하는 프로그램 일체를 의미합니다. \n\n② 이 약관에서 사용하는 용어의 정의는 본 조 제1항에서 정하는 것을 제외하고는 관계법령 및 서비스별 정책에서 정하는 바에 의하며, 이에 정하지 아니한 것은 일반적인 상 관례에 따릅니다.</string>
    <string name="terms_3_title">제3조 (약관의 효력 및 변경)</string>
    <string name="terms_3_content">① 본 약관은 “APP” 내 또는 그 연결화면에 게시하거나 이용자에게 공지함으로써 효력이 발생합니다.\n\n② 운영자는 불가피한 여건이나 사정이 있을 경우 「약관의 규제에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」등 관련 법령에 위배하지 않는 범위에서 이 약관을 개정할 수 있습니다.\n\n③ 운영자가 약관을 개정할 경우에는 적용일자 및 개정내용, 개정사유 등을 명시하여 최소한 그 적용일 7일 이전부터 “APP” 내 또는 그 연결화면에 게시하여 이용자에게 공지합니다. 다만, 변경된 내용이 회원에게 불리하거나 중대한 사항의 변경인 경우에는 그 적용일 30일 이전까지 본문과 같은 방법으로 공지하고, 회원의 서비스 내 알림의 방법으로 회원에게 통지합니다. 이 경우 개정 전 내용과 개정 후 내용을 명확하게 비교하여 회원이 알기 쉽도록 표시합니다.\n\n④ 운영자가 약관을 개정할 경우 개정약관 공지 후 개정약관의 적용에 대한 회원의 동의 여부를 확인합니다. 운영자는 제3항의 공지 또는 통지를 할 경우 회원이 개정약관에 대해 동의 또는 거부의 의사표시를 하지 않으면 동의한 것으로 볼 수 있다는 내용도 함께 공지 또는 통지를 하며, 회원이 이 약관 시행일까지 거부의 의사표시를 하지 않는다면 개정약관에 동의한 것으로 볼 수 있습니다. 회원이 개정약관에 대해 동의하지 않는 경우 운영자 또는 회원은 서비스 이용계약을 해지할 수 있습니다.</string>
    <string name="terms_4_title">제4조 (약관 외 준칙)</string>
    <string name="terms_4_content">이 약관에서 정하지 아니한 사항과 이 약관의 해석에 관하여는 「약관의 규제에 관한 법률」, 「정보통신망이용촉진 및 정보보호 등에 관한 법률」등 관련 법령 또는 상 관례에 따릅니다.</string>
    <string name="terms_5_title">제5조 (회원가입)</string>
    <string name="terms_5_content">① 이용자는 간편 로그인 방식으로 카카오톡 계정과 본 어플리케이션을 연동한 후 닉네임과 입맛정보를 운영자에게 제출함으로써 회원가입을 할 수 있습니다.\n\n② 운영자는 원칙적으로 전 항에 따라 회원가입신청에 대하여 승낙함을 원칙으로 합니다. 다만, 운영자는 다음 각 호의 어느 하나에 해당하는 이용자에 대해서는 사후에 회원자격을 상실시킬 수 있습니다.\n\n1. 회원정보 내용을 허위로 기재하거나 타인의 명의를 도용한 경우\n\n2. 운영자가 서비스를 제공하지 않은 국가에서 비정상적이거나 우회적인 방법을 통해 서비스를 이용하는 경우\n\n3. 사회의 안녕과 질서 또는 미풍양속을 저해할 목적으로 신청한 경우\n\n4.부정한 용도로 서비스를 이용하고자 하는 경우\n\n5. 영리를 추구할 목적으로 서비스를 이용하고자 하는 경우\n\n6. 가입 신청자가 본 약관에 의거 이전에 회원자격을 상실한 적이 있는 경우\n\n7. 부적절한 닉네임을 사용한 경우\n\n8. 그 밖에 각 호에 준하는 사유로서 승낙이 부적절하다고 판단되는 경우</string>
    <string name="terms_6_title">제6조 (회원탈퇴 및 자격상실) </string>
    <string name="terms_6_content">① 회원은 언제든지 서비스 이용을 원하지 않는 경우 언제든지 탈퇴를 요청할 수 있으며, 이 경우 운영자는 즉시 회원탈퇴를 처리합니다. 회원탈퇴로 인해 회원이 서비스 내에서 보유한 이용정보는 모두 삭제되어 복구가 불가능하게 됩니다.\n\n② 운영자는 회원이 이 약관이 금지하거나 공서양속에 반하는 행위를 하는 등 본 계약을 유지할 수 없는 중대한 사유가 있는 경우에는 회원에게 통지하고, 서비스 이용을 제한․중지하거나 회원 자격을 상실시킬 수 있습니다.\n\n③ 운영자가 회원자격을 상실시키는 경우에는 회원에게 이를 통지하고, 회원 등록 말소 전에 소명할 기회를 부여합니다.</string>
    <string name="terms_7_title">제7조 (회원에 대한 통지)</string>
    <string name="terms_7_content">운영자는 불특정다수 회원에 대한 통지의 경우 30일 이상 “APP”에 게시할 수 있습니다.</string>
    <string name="terms_8_title">제8조 (운영자의 의무)</string>
    <string name="terms_8_content">① 운영자는 관련 법령, 이 약관에서 정하는 권리의 행사 및 의무의 이행을 신의에 따라 성실하게 준수합니다.\n\n② 운영자는 회원이 안전하게 서비스를 이용할 수 있도록 개인정보(신용정보 포함)보호를 위해 보안시스템을 갖추어야 하며 개인정보처리방침을 공시하고 준수합니다. 회사는 이 약관 및 개인정보처리방침에서 정한 경우를 제외하고는 회원의 개인정보가 제3자에게 공개 또는 제공되지 않도록 합니다.\n\n③ 운영자는 계속적이고 안정적인 서비스의 제공을 위하여 서비스 개선을 하던 중 설비에 장애가 생기거나 데이터 등이 멸실, 훼손된 때에는 천재지변, 비상사태, 현재의 기술로는 해결이 불가능한 장애나 결함 등 부득이한 사유가 없는 한 지체 없이 이를 수리 또는 복구하도록 최선의 노력을 다합니다.</string>
    <string name="terms_9_title">제9조 (회원의 의무)</string>
    <string name="terms_9_content">① 회원은 운영자가 제공하는 서비스의 이용과 관련하여 다음 각 호에 해당하는 행위를 해서는 안 됩니다.\n\n1. 이용신청 시 타인의 명의를 도용하는 행위\n\n2. 운영자를 가장하여 메일을 발송하는 행위, 타인으로 가장하거나 타인과의 관계를 허위로 명시하는 행위\n\n3. 다른 회원의 개인정보를 무단으로 수집⋅저장⋅게시 또는 유포하는 행위\n\n4. 서비스를 무단으로 영리, 영업, 광고, 홍보, 정치활동, 선거운동 등 본래의 용도 이외의 용도로 이용하는 행위\n\n5. 서비스를 이용하여 얻은 정보를 무단으로 복제․유통․조장하거나 상업적으로 이용하는 행위, 알려지거나 알려지지 않은 버그를 악용하여 서비스를 이용하는 행위\n\n6. 타인을 기망하여 이득을 취하는 행위, 서비스의 이용과 관련하여 타인에게 피해를 입히는 행위\n\n7. 타인의 지적재산권 또는 초상권을 침해하는 행위, 타인의 명예를 훼손하거나 손해를 가하는 행위\n\n8.법령에 의하여 전송 또는 게시가 금지된 정보(컴퓨터 프로그램)나 컴퓨터 소프트웨어⋅하드웨어 또는 전기통신장비의 정상적인 작동을 방해⋅파괴할 목적으로 고안된 바이러스⋅컴퓨터 코드⋅파일⋅프로그램 등을 고의로 전송⋅게시⋅유포 또는 사용하는 행위\n\n9. 운영자로부터 특별한 권리를 부여받지 않고 애플리케이션을 변경하거나, 애플리케이션에 다른 프로그램을 추가⋅삽입하거나, 서버를 해킹⋅역설계하거나, 소스 코드나 애플리케이션 데이터를 유출⋅변경하거나, 별도의 서버를 구축하거나, 웹사이트의 일부분을 임의로 변경⋅도용하여 회사를 사칭하는 행위\n\n10. 그 밖에 관련 법령에 위반되거나 선량한 풍속 기타 사회통념에 반하는 행위\n\n② 계정에 관한 관리책임은 회원에게 있으며, 이를 제3자가 이용하도록 하여서는 안 됩니다.\n\n③ 이용자는 본 약관 및 관련법령에 규정한 사항을 준수하여야 합니다.</string>
    <string name="terms_11_title">제11조 (개인정보의 보호 및 사용)</string>
    <string name="terms_11_content">① 운영자는 이용자의 정보 수집 시 원활한 서비스 제공을 위해 필요한 최소한의 정보를 수집합니다.\n\n1. 카카오톡 가입시\n\n\t로그인 정보 식별 값\n\n② 운영자가 이용자의 개인식별이 가능한 개인정보 및 계정정보를 수집하는 때에는 반드시 당해 이용자의 동의를 받으며, 다음의 목적 이외에는 사용하지 않습니다.\n\n1. 회원관리\n\n\t회원제 서비스 이용에 따른 본인확인, 개인식별, 부정이용 방지, 14세 미만 아동의 경우 법정대리인 동의여부 확인, 가입의사 확인, 문의사항 또는 불만처리 등 민원처리, 분쟁조정 해결을 위한 기록 보존, 고지사항 전달\n\n③ 운영자는 관련 법령에 의하거나, 관련 국가기관 등의 요청이 있는 경우를 제외하고는 회원의 개인정보를 본인의 동의 없이 타인에게 제공하지 않습니다.\n\n④ 이용자는 언제든지 운영자가 가지고 있는 자신의 개인정보에 대해 열람 및 오류정정 또는 동의 철회를 요구할 수 있으며 운영자는 이에 대해 지체 없이 필요한 조치를 취할 의무를 집니다. 이용자가 오류의 정정을 요구한 경우에는 그 오류를 정정할 때까지 해당 개인정보를 이용하지 않습니다. 만 14세 미만 아동의 경우, 법정대리인이 아동의 개인정보를 조회하거나 수정 및 삭제, 처리정지, 수집 및 이용 동의를 철회할 권리를 가집니다.</string>
    <string name="terms_12_title">제12조 (운영자의 면책)</string>
    <string name="terms_12_content">① 운영자는 이 약관 제10조 제3항, 제4항의 사유로 서비스 제공이 일시적으로 중단됨으로 인하여 이용자 또는 제3자가 입은 손해에 대해서는 관련법에 특별한 규정이 없는 한 회원에게 별도의 보상을 하지 않습니다.\n\n② 운영자는 회원의 고의 또는 과실로 인한 서비스 이용의 장애에 대하여는 책임을 지지 않습니다.\n\n③ 서비스와 관련하여 게재한 정보나 자료 등의 신뢰성, 정확성 등에 대하여 운영자는 고의 또는 중대한 과실이 없는 한 책임을 지지 않습니다.\n\n④ 운영자는 무료로 제공되는 서비스 이용과 관련하여 회원에게 발생한 손해에 대해서는 책임을 지지 않습니다.\n\n⑤ 운영자는 회원이 “APP” 계정정보를 관리하지 않아 발생하는 손해에 대해 책임을 지지 않습니다.\n\n⑥ 회원이 모바일 기기의 변경, 모바일 기기의 번호 변경, 운영체제(OS) 버전의 변경, 해외 로밍, 통신사 변경 등으로 인해 콘텐츠 전부나 일부의 기능을 이용할 수 없는 경우 운영자는 이에 대해 책임을 지지 않습니다.\n\n⑦ 회원이 운영자가 제공하는 콘텐츠나 계정정보를 삭제한 경우 운영자는 이에 대해 책임을 지지 않습니다.</string>
    <string name="terms_13_title">제13조 (저작권 등의 귀속)</string>
    <string name="terms_13_content">① 회사가 제작한 서비스 내의 콘텐츠에 대한 저작권과 기타 지적재산권은 회사에 귀속합니다.\n\n② 회원은 회사가 제공하는 서비스를 이용하여 얻은 정보 중에서 회사 또는 제공업체에 지적재산권이 귀속된 정보를 회사 또는 제공업체의 사전 동의 없이 복제⋅전송 등의 방법(편집, 공표, 공연, 배포, 방송, 2차적 저작물 작성 등을 포함합니다. 이하 같습니다)에 의하여 영리목적으로 이용하거나 타인에게 이용하게 하여서는 안 됩니다.\n\n③ 회원의 게시물이 정보통신망법 및 저작권법 등 관련법에 위반되는 내용을 포함하는 경우, 권리자는 관련법이 정한 절차에 따라 해당 게시물을 게시중단 하거나 삭제 할 수 있으며, 이로 인해 발생하는 민·형사상의 책임은 전적으로 해당 회원 본인이 부담하여야 하며, 운영자는 관련법에 따라 조치를 취하여야 합니다.\n\n④ 운영자는 전항에 따른 권리자의 요청이 없는 경우라도 권리침해가 인정될 만한 사유가 있거나 기타 “APP” 정책 및 관련법에 위반되는 경우에는 관련법에 따라 해당 게시물에 대해 임시조치 등을 취할 수 있습니다.\n\n⑤ 이 조는 운영자가 서비스를 운영하는 동안 유효하며, 회원 탈퇴 후에도 지속적으로 적용됩니다.</string>
    <string name="terms_14_title">제14조 (재판권 및 준거법)</string>
    <string name="terms_14_content">이 약관은 대한민국 법률에 따라 규율되고 해석됩니다. 운영자와 회원 간에 발생한 분쟁으로 소송이 제기되는 경우에는 법령에 정한 절차에 따른 법원을 관할 법원으로 합니다.</string>
</resources>