<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_main_home"
        android:title="@string/menu_main_bottom_home"
        android:icon="@mipmap/ic_launcher"/>
    <item
        android:id="@+id/menu_main_research_recipe"
        android:title="@string/menu_main_bottom_research_recipe"
        android:icon="@mipmap/ic_launcher"/>
    <item
        android:id="@+id/menu_main_write_recipe"
        android:title="@string/menu_main_bottom_write_recipe"
        android:icon="@mipmap/ic_launcher"/>
    <item
        android:id="@+id/menu_main_my_recipe"
        android:title="@string/menu_main_bottom_my_recipe"
        android:icon="@mipmap/ic_launcher"/>
    <item
        android:id="@+id/menu_main_my_page"
        android:title="@string/menu_main_bottom_my_page"
        android:icon="@mipmap/ic_launcher"/>
</menu>